Changes to be best practice HTML

--- a/index.html
+++ b/index.html
@@ -172,45 +172,45 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 	      <!-- Slideshow -->
 	  <div class="w3-container w3-margin-bottom w3-centre w3-content" style="width:60%">
       <div class="w3-display-container mySlides">	 
-   	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14709412_1359192387424160_899822122690412544_n.jpg" style="width:100%">
+   	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14709412_1359192387424160_899822122690412544_n.jpg" style="width:100%" alt="Image01">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom">'Super Moon' </span>
          </div>
        </div>
    	   <div class="w3-display-container mySlides">
-           <img src="https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/18646153_1437212846359375_3415490205757472768_n.jpg" style ="width:100%">
+           <img src="https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/18646153_1437212846359375_3415490205757472768_n.jpg" style ="width:100%" alt="Image02">
         <div class="w3-display-topleft w3-container w3-padding-32">
           <span class="w3-white w3-padding-large w3-animate-bottom">Jupiter (Io, Ganymede, Europa, Callisto)</span>
         </div>
       </div>
        
 	   <div class="w3-display-container mySlides">
-     	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/15338432_556249601245171_233840855935352832_n.jpg" style ="width:100%">
+     	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/15338432_556249601245171_233840855935352832_n.jpg" style ="width:100%" alt="Image03">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom">Venus</span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/12142732_1019867828033675_248088834_n.jpg" style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/12142732_1019867828033675_248088834_n.jpg" style="width:100%" alt="Image04">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> Rome</span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14726409_334440503592277_5149806516802420736_n.jpg" style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14726409_334440503592277_5149806516802420736_n.jpg" style="width:100%" alt="Image05">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> Paris</span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14052602_1749051612010256_5850889855482986496_n.jpg" style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14052602_1749051612010256_5850889855482986496_n.jpg" style="width:100%" alt="Image06">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> King's Boulevard</span>
          </div>
        </div>
 	   
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/11939539_1483170971983224_1984147973_n.jpg" style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/11939539_1483170971983224_1984147973_n.jpg" style="width:100%" alt="Image07">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> Mid-day </span>
          </div>
