Trying to fix mobile positioning

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <title>DHASTIE.SPACE</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
 <link rel="stylesheet" href="https://raw.githubusercontent.com/D-Hastie/D-Hastie.github.io/master/w3lib.css">
 <link rel="stylesheet" type="text/css" href="./w3lib.css"/>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
