Trying to fix mobile positioning

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 	  
 	   	<!-- Insta Embedded Section -->
 	      <!-- Slideshow -->
-	  <div class="w3-container w3-margin-bottom w3-centre w3-content" style="width:60%; min-width:500px">
+	  <div class="w3-container w3-margin-bottom w3-centre w3-content" style="width:100%; max-width:500px">
       <div class="w3-display-container mySlides">	 
    	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14709412_1359192387424160_899822122690412544_n.jpg" style="width:100%" alt="Image01">
          <div class="w3-display-topleft w3-container w3-padding-32">
