--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="./image-placeholder-reduced.png" style="width:100%" alt="Placeholder">
-          <div class="w3-display-top-left w3-container w3-text-black ">
+          <div class="w3-display-bottom-left w3-container w3-text-black ">
             <h1 class="w3-text-kent-blue" style="font-family: 'Didact Gothic', sans-serif;"> DAVID HASTIE </h1>
           </div>
         </div>
@@ -47,7 +47,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			  </tr>
 			  <tr class="spaceUnder">
 				  <td style="font-size:17px">
-					 <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; 
+					 <i class="fa fa-space-shuttle w3-text-kent-blue" aria-hidden="true"> </i> Python &nbsp; &nbsp; 
 				  </td>
 				  <td style="font-size:13px">
 					  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"><i class="fa fa-external-link-square w3-text-kent-blue"></i></a> Python Project
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td style="font-size:17px">
-					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp;
+					 <i class="fa fa-space-shuttle w3-text-kent-blue" aria-hidden="true"></i> C++ &nbsp; &nbsp;
 				 </td>
 				 <td style="font-size:13px">
 					 <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><i class="fa fa-external-link-square w3-text-kent-blue"></i></a> C++ Projects
@@ -63,7 +63,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td style="font-size:17px">
-					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; 
+					 <i class="fa fa-space-shuttle w3-text-kent-blue" aria-hidden="true"></i> LaTeX  &nbsp; &nbsp; 
 				 </td>
 				 <td style="font-size:13px">
 					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a> CV written in LaTeX 
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td style="font-size:17px">
-					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran
+					 <i class="fa fa-space-shuttle w3-text-kent-blue" aria-hidden="true"></i> Fortran
 				 </td>
 				 <td>
 				 </td>
