--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
     <div class="w3-third w3-margin-bottom" style="position:relative" >
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="./image-placeholder-reduced.png" style="width:100%" alt="Placeholder">
-          <div class="w3-display-bottom-left w3-container w3-text-black ">
+          <img src="./DH-image.png" style="width:100%" alt="Placeholder">
+          <div class="w3-display-bottomleft w3-container w3-text-black ">
             <h1 class="w3-text-kent-blue" style="font-family: 'Didact Gothic', sans-serif;"> DAVID HASTIE </h1>
           </div>
         </div>
@@ -168,7 +168,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
         <div class="w3-container w3-margin-bottom w3-content w3-center">
 			<i class="w3-text-grey"> - Programming - Photography (+astro) - Travelling - Open Source - Kick Boxing - </i>
 			</div>
-		
+			
 	   <!--Instagram Test --> 
 	  
 	   	<!-- Insta Embedded Section -->
