--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="./DH-image.png" style="width:100%" alt="Placeholder">
-          <div class="w3-display-bottomleft w3-container w3-text-black ">
-            <h1 class="w3-text-kent-blue" style="font-family: 'Didact Gothic', sans-serif;"> DAVID HASTIE </h1>
+          <div class="w3-display-bottomleft w3-container">
+            <h1 class="w3-text-kent-blue" style="font-family: 'Didact Gothic', sans-serif; margin-bottom:-5px"> DAVID HASTIE </h1>
           </div>
         </div>
         <div class="w3-container">
