--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
 .mySlides {display:none}
 
@@ -34,7 +37,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>Physics Graduate</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>Physics Masters Graduate</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>High Wycombe, UK</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>dh429@kent.ac.uk</p>
           <!-- <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>1224435534</p> -->
@@ -160,6 +163,44 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
        </div>
 	   <!--End Work and Experience Section -->
 	   </div>
+
+      <div class="w3-container w3-card-2 w3-white">
+        <h3 class="w3-text-grey w3-padding-16"><i class="fa fa-folder fa-fw w3-margin-right w3-xxlarge w3-text-kent-blue"></i>Other Projects</h3>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>  Cyber Security course at edx.org</b></h5> 
+		  <ul class="w3-text-grey">
+			  <li> Enrolled in an online introduction course to cyber security fundamentals provided by Rochester Institute of Technology (RITx) </li>
+			  <li> Teaches concepts in network and system administration including; packets, routing, MAC and IP addressing, and protocols.</li>
+			  <li> Introduces information assurance fundamentals such as, integrity, confidentiality and availability. </li>
+			  <li> Also introduces simple cryptography methods including symmetric and asymmetric methods. </li>
+		  </ul>		
+          <hr>
+          <h5 class="w3-opacity"><b> Over the wire</b></h5> 
+		  <ul class="w3-text-grey">
+			  <li> A series of 'wargames' to help learn and practice security concepts through shell games.</li>
+			  
+	  	</div>
+		<h5 class="w3-opacity"><b>  Cyber Security course at edx.org</b></h5> 
+	  	<!--List items -->
+<div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#collapse1">Collapsible panel</a>
+      </h4>
+    </div>
+    <div id="collapse1" class="panel-collapse collapse">
+      <div class="panel-body">Panel Body</div>
+      <div class="panel-footer">Panel Footer</div>
+    </div>
+  </div>
+</div>
+		
+		
+       </div>
+	   <!--End Work and Experience Section -->
+	   
+
 	  
 <!--Interests Section -->
 
