--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <title>DAVID HASTIE</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://raw.githubusercontent.com/D-Hastie/D-Hastie.github.io/master/w3lib.css">
-<link rel="stylesheet" type="text/css" href="./w3lib.css"/>
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+
+<head>
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/D-Hastie/D-Hastie.github.io/master/w3lib.css">
+	<link rel="stylesheet" type="text/css" href="./w3lib.css"/>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+</head>
+
 <style>
 .mySlides {display:none}
-
 .w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
 html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
-
 </style>
+
 <body class="w3-light-grey">
 
 
@@ -178,7 +183,6 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b> Over the wire</b></h5> 
 		  <ul class="w3-text-grey">
 			  <li> A series of 'wargames' to help learn and practice security concepts through shell games.</li>
-		  </ul>
 			  
 	  	</div>
 		<h5 class="w3-opacity"><b>  Cyber Security course at edx.org</b></h5> 
