--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 <!--End right Column -->
    </div>
   <!-- End Grid -->
-  
+</div>
   <!-- End Page Container -->
 </div>
 
